# hydrag-benchmark

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/hydrag_benchmark/: __init__.py  augmentation_cache.py  beir_loader.py  beir_runner.py  cli.py  doc2query.py  embedding.py  harness.py  metrics.py  quality_filter.py  runner.py  suite.py
src/hydrag_benchmark/heads/: __init__.py  base.py  head_a.py  head_b.py  head_c.py  head_d.py  head_e.py  head_hydrag.py
suites/: cpython-stdlib.yaml  k8s-kep.yaml  synthetic-smoke.yaml
tests/: __init__.py  conftest.py  test_beir.py  test_cli.py  test_doc2query.py  test_harness.py  test_head_a.py  test_head_b.py  test_head_hydrag.py  test_metrics.py  test_prefill.py  test_quality_filter.py  test_strategy.py  test_suite.py
